--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Templates Plugins",
+    "name": "Templates plugin",
     "description": "Custom Template Plugins",
     "version":"1.0.0",
     "author": "Rishabh",
